<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_OxygenInjector_1" Id="{71de7cc2-0071-4f63-a14c-4f4e62f9fb36}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
FUNCTION_BLOCK FB_OxygenInjector_1 EXTENDS FB_BaseDevice IMPLEMENTS I_Device

VAR
	
	{attribute 'OPC.UA.DA' := '1'} 
	bInContactor AT %I*: BOOL := FALSE;
	{attribute 'OPC.UA.DA' := '1'} 
	bOutContactor AT %Q*: BOOL := FALSE;
	
	{attribute 'OPC.UA.DA' := '0'} 
	eSMState: (WAIT, TURNING_ON, ON, TURNING_OFF, OFF);
	
	{attribute 'OPC.UA.DA' := '0'} 
	tActionTimeout: TIME := T#5S;
	{attribute 'OPC.UA.DA' := '0'} 
	fbTON_timeout: TON := (PT := tActionTimeout, IN := FALSE);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbTONstartTime();
fbTONstopTime();

IF GVL.bAutoUpdateDeviceState THEN
	eState := eStateTarget;	
END_IF


IF eMode = E_DeviceMode.MANUAL THEN
	bEnable := TRUE;
END_IF

IF bEnable AND eStateTarget = E_DeviceState.ON AND eState <> E_DeviceState.ON THEN
		eSMState := TURNING_ON;
END_IF

IF bEnable = FALSE OR (eStateTarget = E_DeviceState.OFF AND eState <> E_DeviceState.OFF) THEN
		eSMState := TURNING_OFF;
END_IF


CASE eSMState OF
	
	WAIT:
		//Wait for method call to change ESMState
		
	TURNING_ON: 
		eState := E_DeviceState.TURNING_ON;

		bOutContactor := TRUE;
	
		IF fbTONstartTime.Q THEN
			eSMState := WAIT;
			raiseAlarm(Priority := E_AlarmPriority.High, Label := 'Failed to Start', Enabled := TRUE, DeviceAlarmID := 1);
		END_IF
		
		IF bInContactor  THEN
			eSMState := ON;
			eState := E_DeviceState.ON;
		END_IF
		
	ON:
		IF bInContactor <> TRUE THEN
			raiseAlarm(Priority := E_AlarmPriority.High, Label := 'Power Lost', Enabled := TRUE, DeviceAlarmID := 2);
			eState := E_DeviceState.OFF;
			eSMState := WAIT;
		END_IF
		

		
	TURNING_OFF:
		eState := E_DeviceState.TURNING_OFF;
		bOutContactor := FALSE;

				
		IF fbTONstopTime.Q THEN
			eSMState := WAIT;
			raiseAlarm(Priority := E_AlarmPriority.High, Label := 'Failed to Stop', Enabled := TRUE, DeviceAlarmID := 3);
		END_IF 
		
		IF bInContactor = FALSE THEN
			eSMState := OFF;	
		END_IF
		

	OFF:
		eState := E_DeviceState.OFF;
		eSMState := WAIT;
		
		
END_CASE]]></ST>
    </Implementation>
    <Method Name="disable" Id="{8c623c45-ae26-4dad-ab9d-fc92a9a2c298}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD disable : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bEnable := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="enable" Id="{4a1b4ede-230f-4793-8727-fae1603572d9}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD enable : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bEnable := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{58519b23-674d-4d0c-b456-8377be3c990e}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	UnitID: STRING(80);
	UnitDescr: STRING(255); 
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[sID := UnitID;
sDescr := UnitDescr;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setOff" Id="{be75896c-96f1-47c7-b608-27a44d1f73d0}">
      <Declaration><![CDATA[METHOD setOff : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[eSMState := TURNING_OFF;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setOn" Id="{3e0731fc-0cd5-4843-834b-554a45eff060}">
      <Declaration><![CDATA[METHOD setOn : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[eSMState := TURNING_ON;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_OxygenInjector_1">
      <LineId Id="145" Count="1" />
      <LineId Id="226" Count="0" />
      <LineId Id="228" Count="2" />
      <LineId Id="278" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="268" Count="9" />
      <LineId Id="156" Count="51" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_OxygenInjector_1.disable">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_OxygenInjector_1.enable">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_OxygenInjector_1.FB_init">
      <LineId Id="16" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_OxygenInjector_1.setOff">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_OxygenInjector_1.setOn">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>